<resources>
    <string name="app_name">Smash-K</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="access_token">sk.eyJ1IjoiZmFzOTYiLCJhIjoiY2thdjZpdjZ5MWZ6MjJwcWZncXgxaTdnMiJ9.bXCQAdRFf96aW7CApYCNdQ</string>
    <string name="tracking_enabled">Tracking enabled</string>
    <string name="tracking_already_enabled">tracking already enabled</string>
    <string name="user_location_permission_explanation">Permission is needed-Explantion</string>
    <string name="user_location_permission_not_granted">user location permission not granted</string>
    <string name="new_location">new location</string>
    <string name="privacytext">Only those in your contacts can add you as a friend.\n\nYou can exchange messages and emojis to people in your phone contact and your Smash-K friends only.</string>
    <string name="smashkmsg">In a stroke of genius, you enjoyed Smash-K on a bright morning in May 2020. It\'s been 1 day since then and our love for you has never faltered.</string>
    <string name="profile_id">Profile</string>
    <string name="dummy_text">dummy_text</string>
    <string name="dummy_texts">dumm_texts</string>
    <string name="dummy_b">dummb_</string>
    <string name="uncounted_view">uncounted_view</string>
    <string name="count_view">9+</string>
    <string name="username">Birthday</string>
    <string name="jan_dob_val">01/12/2012</string>
    <string name="birthday">Birthday</string>
    <string name="name_ex">name</string>
    <string name="name">Name</string>
    <string name="name_">Name</string>
    <string name="profile">PROFILE</string>
    <string name="access_permission">Permission\n
        requests protect sensitive information available\n from a
        device and should only be used when access to information\n is necessary
        for the functioning of your app.\n This document provides tips on ways you
        might be able to achieve the same (or better) functionality without requiring
        access to such information;\n it is not an exhaustive discussion of how permissions\n
        work in the \nAndroid operating system.</string>
    <string name="access_reason_tip">Reason for location</string>
    <string name="enter_your_username">Enter your username</string>

    <string name="enter_your_username_">Enter your username</string>
    <string name="ok">OK!</string>
    <string name="start_nav_btn">Start Navigation</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_background">login background</string>
    <string name="app_snipp">Smash-K</string>
    <string name="register_">Register</string>
    <string name="login">Login</string>
    <string name="hint_message_edt">Start a message</string>
    <string name="can_we_help">Can We Help?</string>
    <string name="cancel_home">Cancel</string>
    <string name="setting_menu_item">Setting</string>
    <string name="smash_k_share">Share Smask-K</string>
    <string name="contact_call_item">Call Friend</string>
    <string name="user_name">User name</string>
    <string name="add_view_person">+ ADD</string>
    <string name="fp_name_text">friend\'s name</string>
    <string name="home_share_num_texts">At home</string>
    <string name="mutual_you_b">MUTUAL</string>
    <string name="friend_number_tv">5 FRIENDS</string>
    <string name="mutual_number_tv">0 MUTUAL FRIENDS</string>
    <string name="title_chat">Chat</string>
    <string name="title_location">Location</string>
    <string name="title_Profile">Profile</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="detectimages">Detect</string>
    <string name="settings">Settings</string>
    <string name="default_web_client_id" translatable="false">808631794131-gkdk922mv6cvnrmpuva3gif67rk6p747.apps.googleusercontent.com</string>
    <string name="firebase_database_url" translatable="false">https://face-recognition-e2a55.firebaseio.com</string>
    <string name="gcm_defaultSenderId" translatable="false">808631794131</string>
    <string name="google_api_key" translatable="false">AIzaSyCzVNO3tS18T99RuTj7YnNGx2nmESksO-8</string>
    <string name="google_app_id" translatable="false">1:808631794131:android:101c97bcb252b6d4215726</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyCzVNO3tS18T99RuTj7YnNGx2nmESksO-8</string>
    <string name="google_storage_bucket" translatable="false">face-recognition-e2a55.appspot.com</string>
    <string name="project_id" translatable="false">face-recognition-e2a55</string>
    <string name="close">Close</string>
</resources>