<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3.0dip"
    android:elevation="3.0dip"
    app:cardCornerRadius="5.0dip">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2.0dip"
        android:layout_marginBottom="2.0dip">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/sug_friend_image"
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:src="@drawable/ic_profile_account_circle_24"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="8.0dip" />

        <TextView
            android:id="@+id/sug_or_friends_contact_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/sug_friend_image"
            android:layout_toStartOf="@+id/add_friend_lnt"
            android:layout_toEndOf="@id/sug_friend_image"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/fp_name_text" />

        <TextView
            android:id="@+id/start_message_loc_mutual"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sug_friend_image"
            android:layout_toEndOf="@id/sug_friend_image"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/home_share_num_texts" />

        <TextView
            android:id="@+id/friend_prof_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/sug_friend_image"
            android:layout_alignParentEnd="true"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:text="@string/mutual_you_b" />

        <Button
            android:id="@+id/add_friend_lnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sug_friend_image"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="8.0dip"
            android:layout_marginRight="8.0dip"
            style="@style/suggest_person"
            android:gravity="center"
            android:text="@string/add_view_person"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>