<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/top_profile_and_name"
            style="@style/loginCard"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="@dimen/loginViewsMargin"
            android:background="@color/mapboxWhite"
            android:elevation="5dp"
            app:cardCornerRadius="@dimen/loginCardRadius">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16.0dip">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/friend_image_profile_civ"
                        android:layout_width="200.0dip"
                        android:layout_height="200.0dip"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16.0dip"
                        android:elevation="5.0dip"
                        android:src="@drawable/ic_profile"
                        app:cardCornerRadius="100.0dip" />

                    <TextView
                        android:id="@+id/friends_prof_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="16.0dip"
                        android:layout_marginEnd="100dp"
                        android:text="@string/user_name"
                        android:textAlignment="center" />


                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/id_friends_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_margin="6dp"
            android:textSize="23sp"
            android:text="@string/friend_number_tv"/>
        <TextView
            android:id="@+id/id_mutual_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/mutual_number_tv"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friends_list_fprof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>


</ScrollView>